[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sral"
version = "1.0.0"
description = "Python ctypes bindings for the Screen Reader Abstraction Library (SRAL)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Accessibility",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["sral*"]

[tool.setuptools.package-data]
sral = ["*.dll", "*.so", "*.dylib"]
